--- a/views/report.xml
+++ b/views/report.xml
@@ -48,6 +48,20 @@
             <field name="paperformat_id" ref="is_plastigray.cde_ouverte_fournisseur_paperformat"/>
         </record>
 
+        <report 
+            id="report_appel_de_livraisons"
+            model="is.cde.ouverte.fournisseur"
+            string="Appel de livraison"
+            report_type="qweb-pdf"
+            name="is_plastigray.report_appel_de_livraison"
+            file="is_plastigray.report_appel_de_livraison"
+        />
+        <record id="report_appel_de_livraisons" model="ir.actions.report.xml">
+            <field name="paperformat_id" ref="is_plastigray.cde_ouverte_fournisseur_paperformat"/>
+        </record>
+
+
+
 
 
         <report 
