--- a/views/report_paperformat.xml
+++ b/views/report_paperformat.xml
@@ -120,5 +120,24 @@
 
 
 
+        <record id="bon_transfert_paperformat" model="report.paperformat">
+            <field name="name">Bon de transfert</field>
+            <field name="default" eval="True" />
+            <field name="format">A4</field>
+            <field name="page_height">0</field>
+            <field name="page_width">0</field>
+            <field name="orientation">Portrait</field>
+            <field name="margin_top">55</field>
+            <field name="margin_bottom">25</field>
+            <field name="margin_left">7</field>
+            <field name="margin_right">7</field>
+            <field name="header_line" eval="False" />
+            <field name="header_spacing">50</field>
+            <field name="dpi">90</field>
+        </record>
+
+
+
+
     </data>
 </openerp>
