--- a/views/report_appel_de_livraison.xml
+++ b/views/report_appel_de_livraison.xml
@@ -155,12 +155,15 @@
 
             <div t-foreach="o.product_ids" t-as="p" style="page-break-after:always;">
                 <div>Article : <b><span t-field="p.product_id"/></b></div>
+                <div t-if="p.date_bl">Dernier BL : <span t-field="p.num_bl"/> du <span t-field="p.date_bl"/> (Qt=<span t-field="p.qt_bl"/> <span t-field="p.uom_po_id"/>)</div>
+                <div t-if="p.date_bl==False">Dernier BL : Aucun</div>
                 <table class="table table-condensed">
                     <thead>
                         <tr>
                             <th class="text-center">Date</th>
                             <th class="text-center">Type</th>
                             <th class="text-right">Quantité</th>
+                            <th class="text-right">Unité</th>
                             <th class="text-center">N°Commande</th>
                         </tr>
                     </thead>
@@ -169,6 +172,7 @@
                             <td class="text-center"><span t-field="l.date"/></td>
                             <td class="text-center"><span t-field="l.type_cde"/></td>
                             <td class="text-right"><span t-field="l.quantite"/></td>
+                            <td class="text-right"><span t-field="p.uom_po_id"/></td>
                             <td class="text-center"><span t-field="l.purchase_order_id.name"/></td>
                         </tr>
                     </tbody>
