--- a/views/report_appel_de_livraison.xml
+++ b/views/report_appel_de_livraison.xml
@@ -8,7 +8,7 @@
                 font-size:10pt;
             }
             .footer {
-                font-size:7pt;
+                font-size:9pt;
             }
             .page {
                 font-size:9pt;
@@ -19,7 +19,7 @@
             }
             .expediteur {
                 font-size:9pt;
-                text-align:center;
+                text-align:left;
             }
             .destinataire {
                 text-align:left;
@@ -64,32 +64,46 @@
         <!-- Entête personnalisé Plastigray -->
         <template id="report_appel_de_livraison_external_layout_header">
             <div class="header">
-
                 <div class="row">
-                    <div class="col-xs-4  text-center">
+                    <div class="col-xs-4  text-left">
                         <img t-if="company.logo" t-att-src="'data:image/png;base64,%s' % company.logo" style="max-height: 60px;"/>
                         <div class="expediteur">
-                            S.A.S. au capital de 2 102 400 € <br />
-                            Siège social : ZAC de Gray Sud <br />
-                            CS 10133 - <b>70104 GRAY Cedex</b><br />
-                            Tél. : 03 84 64 77 00 - Fax : 03 84 65 51 09 <br />
-                            Siret B 377 846 381 00020 - Code NAF 2229 A <br />
-                            Registre du Commerce GRAY <br />
-                            N°Identification T.V.A. FR 65 377 846 381 <br />
+                        <b>Adresse de livraison : <span t-field="company.name"/><br />
+                            <span t-field="company.street"/><br />
+                            <span t-field="company.street2"/><br />
+                            <span t-field="company.zip"/> <span t-field="company.city"/></b><br /><br />
+                        <i>Adrese de facturation : PLASTIGRAY SAS <br />
+                            ZAC de Gray Sud CS 10133 <br />
+                            70104 GRAY Cedex</i>
                         </div>
                     </div>
                     <div class="col-xs-1" />
                     <div class="col-xs-7">
                         <div class="titre">
-                            <span>Appel de livraison sur contrat N°</span>
-                            <span t-field="o.name"/>
-                             du <t t-usertime="%d/%m/%Y"/> à <t t-usertime="%H"/>H<br />
+                            <t t-if="o.type_commande=='ouverte'">
+                                <span>Appel de livraison sur contrat N°</span>
+                                <span t-field="o.name"/>
+                                 du <t t-usertime="%d/%m/%Y"/> à <t t-usertime="%H"/>H<br />
+                            </t>
+                            <t t-if="o.type_commande!='ouverte'">
+                                <span>Horizon des besoins</span>
+                                 du <t t-usertime="%d/%m/%Y"/> à <t t-usertime="%H"/>H<br />
+                            </t>
                         </div>
                         <div class="destinataire">
                             <b><span t-field="o.partner_id.name"/></b> (<span t-field="o.partner_id.is_code"/>)
                             <div t-field="o.partner_id"
                                  t-field-options='{"widget": "contact", "fields": ["address", "phone", "fax"], "no_marker": true}'/>
                         </div>
+                    </div>
+                </div><br />
+                <div class="row">
+                    <div class="col-xs-12">
+                        <i>
+                        Conditions de paiement :  <span t-field="o.partner_id.property_supplier_payment_term.name"/> <br />
+                        Type de réglement :       <span t-field="o.partner_id.is_type_reglement.name"/> <br />
+                        Incoterm :                <span t-field="o.partner_id.is_incoterm.name"/> <br />
+                        </i>
                     </div>
                 </div>
             </div>
@@ -100,17 +114,19 @@
         <!-- Pied de page personnalisé Plastigray -->
         <template id="report_appel_de_livraison_external_layout_footer">
             <div class="footer">
-                <div class="text-center" style="border-top: 1px solid black">
-                    <table>
+                <div style="border-top: 1px solid black">
+                    <table style="width:100%">
                         <tr>
                             <td class="text-left" style="width:90%">
-                                <b>Clause de réserve de propriété : </b>De convention expresse, nous nous réservons la plein propriété des marchandises fournies jusqu'au dernier jour de leur parfait paiement.<br />
-                                <b>Reserve of title : </b>On express convention, we reserve ourselves the freehold of the provides goods until the last day of their total payment.<br />
-                                <b>T.V.A. acquitée sur les débits</b><br />
-                                <b>V.A.T. on debits</b><br />
+                                <b>Cette commande est soumise à l'acceptation de nos conditions générales d'achats. 
+                                En cas de désaccord ou de contradiction se référer au contrat cadre.
+                                Nos conditions générales d'achats sont accessibles et téléchargeables sur notre site internet. </b><br />
+
+                                PLASTIGRAY - S.A.S. au capital de 2 102 400 € - Siège social : ZAC de Gray Sud CS 10133 70104 GRAY Cedex<br />
+                                Siret B 377 846 381 00020 - Code NAF 2229 A - Registre du Commerce GRAY - N°Identification T.V.A. FR 65 377 846 381<br />
                             </td>
                             <td class="text-right">
-                                Page <span class="page" style="font-size:7pt;"/> / <span class="topage"/>
+                                Page <span class="page" style="font-size:9pt;"/> / <span class="topage"/>
                             </td>
                         </tr>
                     </table>
@@ -152,31 +168,63 @@
 <template id="report_appel_de_livraison_document">
     <t t-call="is_plastigray.report_appel_de_livraison_external_layout">
         <div class="page">
-
-            <div t-foreach="o.product_ids" t-as="p" style="page-break-after:always;">
-                <div>Article : <b><span t-field="p.product_id"/></b></div>
-                <div t-if="p.date_bl">Dernier BL : <span t-field="p.num_bl"/> du <span t-field="p.date_bl"/> (Qt=<span t-field="p.qt_bl"/> <span t-field="p.uom_po_id"/>)</div>
-                <div t-if="p.date_bl==False">Dernier BL : Aucun</div>
-                <table class="table table-condensed">
-                    <thead>
-                        <tr>
-                            <th class="text-center">Date</th>
-                            <th class="text-center">Type</th>
-                            <th class="text-right">Quantité</th>
-                            <th class="text-right">Unité</th>
-                            <th class="text-center">N°Commande</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr t-foreach="p.line_ids" t-as="l">
-                            <td class="text-center"><span t-field="l.date"/></td>
-                            <td class="text-center"><span t-field="l.type_cde"/></td>
-                            <td class="text-right"><span t-field="l.quantite"/></td>
-                            <td class="text-right"><span t-field="p.uom_po_id"/></td>
-                            <td class="text-center"><span t-field="l.purchase_order_id.name"/></td>
-                        </tr>
-                    </tbody>
-                </table>
+            <t t-set="nb_imprimer" t-value="0"/>
+            <t t-foreach="o.product_ids" t-as="p">
+                <t t-if="p.imprimer==True">
+                    <t t-set="nb_imprimer" t-value="nb_imprimer+1"/>
+                </t>
+            </t>
+            <div t-foreach="o.product_ids" t-as="p">
+                <t t-if="o.sans_commande=='oui'">
+                    <t t-set="test" t-value="1"/>
+                </t>
+                <t t-if="o.sans_commande!='oui'">
+                    <t t-set="test" t-value="0"/>
+                    <t t-if="p.line_ids">
+                        <t t-set="test" t-value="len(p.line_ids)"/>
+                    </t>
+                </t>
+                <t t-set="test_imprimer" t-value="0"/>
+                <t t-if="nb_imprimer==0">
+                    <t t-set="test_imprimer" t-value="1"/>
+                </t>
+                <t t-if="nb_imprimer>=0">
+                    <t t-if="p.imprimer==True">
+                        <t t-set="test_imprimer" t-value="1"/>
+                    </t>
+                </t>
+                <t t-if="test>0">
+                    <t t-if="test_imprimer==1">
+                        <div>Article : <b><span t-field="p.product_id"/></b></div>
+                        <div t-if="p.date_bl">Dernier BL : <span t-field="p.num_bl"/> du <span t-field="p.date_bl"/> (Qt=<span t-field="p.qt_bl"/> <span t-field="p.uom_po_id"/>)</div>
+                        <div t-if="p.date_bl==False">Dernier BL : Aucun</div>
+                        <table class="table table-condensed">
+                            <thead>
+                                <tr>
+                                    <th class="text-center">Date</th>
+                                    <th class="text-center">Type</th>
+                                    <th class="text-right">Quantité</th>
+                                    <th class="text-right">Unité</th>
+                                    <t t-if="o.type_commande!='ouverte'">
+                                        <th class="text-center">N°Commande</th>
+                                    </t>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr t-foreach="p.line_ids" t-as="l">
+                                    <td class="text-center"><span t-field="l.date"/></td>
+                                    <td class="text-center"><span t-field="l.type_cde"/></td>
+                                    <td class="text-right"><span t-field="l.quantite"/></td>
+                                    <td class="text-right"><span t-field="p.uom_po_id"/></td>
+                                    <t t-if="o.type_commande!='ouverte'">
+                                        <td class="text-center"><span t-field="l.purchase_order_id.name"/></td>
+                                    </t>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <div style="page-break-after:always;" />
+                    </t>
+                </t>
             </div>
 
         </div>
