--- a/views/report_cde_ouverte_fournisseur.xml
+++ b/views/report_cde_ouverte_fournisseur.xml
@@ -8,7 +8,7 @@
                 font-size:10pt;
             }
             .footer {
-                font-size:7pt;
+                font-size:9pt;
             }
             .page {
                 font-size:9pt;
@@ -17,16 +17,22 @@
                 font-size:11pt;
                 font-weight: bold;
             }
-            .expediteur {
-                font-size:9pt;
+            .livraison {
+                font-size:11pt;
+                font-weight: bold;
                 text-align:left;
             }
-            .destinataire {
+            .facturation {
+                font-size:10pt;
+                font-style: italic;
+                text-align:left;
+
+            }
+            .fournisseur {
                 text-align:left;
                 border: 1px solid black;
                 padding:5mm;
             }
-
         </template>
 
 
@@ -67,24 +73,26 @@
                 <div class="row">
                     <div class="col-xs-4  text-left">
                         <img t-if="company.logo" t-att-src="'data:image/png;base64,%s' % company.logo" style="max-height: 60px;"/>
-                        <div class="expediteur">
-                        <b>Adresse de livraison : <span t-field="company.name"/><br />
-                            <span t-field="company.street"/><br />
+                        <div class="livraison">
+                            Adresse de livraison : <br />
+                            <span t-field="company.name"/> <span t-field="company.street"/><br />
                             <span t-field="company.street2"/><br />
-                            <span t-field="company.zip"/> <span t-field="company.city"/></b><br /><br />
-                        <i>Adrese de facturation : PLASTIGRAY SAS <br />
+                            <span t-field="company.zip"/> <span t-field="company.city"/><br /><br />
+                        </div>
+                        <div class="facturation">
+                            Adrese de facturation : PLASTIGRAY SAS <br />
                             ZAC de Gray Sud CS 10133 <br />
-                            70104 GRAY Cedex</i>
+                            70104 GRAY Cedex
                         </div>
                     </div>
                     <div class="col-xs-1" />
                     <div class="col-xs-7">
                         <div class="titre">
                             <span>Commande ouverte N°</span>
-                            <span t-field="o.name"/>
+                            <span style="font-size:12pt;" t-field="o.name"/>
                              du <t t-usertime="%d/%m/%Y"/> à <t t-usertime="%H"/>H<br />
                         </div>
-                        <div class="destinataire">
+                        <div class="fournisseur">
                             <b><span t-field="o.partner_id.name"/></b> (<span t-field="o.partner_id.is_code"/>)
                             <div t-field="o.partner_id"
                                  t-field-options='{"widget": "contact", "fields": ["address", "phone", "fax"], "no_marker": true}'/>
@@ -113,8 +121,7 @@
                         <tr>
                             <td class="text-left" style="width:90%">
                                 <b>Cette commande est soumise à l'acceptation de nos conditions générales d'achats. 
-                                En cas de désaccord ou de contradiction se référer au contrat cadre.
-                                Nos conditions générales d'achats sont accessibles et téléchargeables sur notre site internet. </b><br />
+                                En cas de désaccord ou de contradiction se référer au contrat cadre. </b><br />
 
                                 PLASTIGRAY - S.A.S. au capital de 2 102 400 € - Siège social : ZAC de Gray Sud CS 10133 70104 GRAY Cedex<br />
                                 Siret B 377 846 381 00020 - Code NAF 2229 A - Registre du Commerce GRAY - N°Identification T.V.A. FR 65 377 846 381<br />
@@ -165,25 +172,23 @@
 
             <table class="table table-condensed">
                 <thead>
-                    <tr>
-                        <th class="text-left">Article</th>
-                        <th class="text-left">Désignation</th>
-                        <th class="text-left">Référence fournisseur</th>
-                        <th class="text-left">Plan</th>
-                        <th class="text-right">Lot d'appro</th>
-                        <th class="text-left">Unité</th>
-                        <th class="text-right">Prix d'achat</th>
-                        <th class="text-left">Unité</th>
+                    <tr >
+                        <th class="text-left"  style="vertical-align:top">Article</th>
+                        <th class="text-left"  style="vertical-align:top">Désignation</th>
+                        <th class="text-left"  style="vertical-align:top">Référence<br />fournisseur</th>
+                        <th class="text-left"  style="vertical-align:top">Plan</th>
+                        <th class="text-right" style="vertical-align:top">Minimum de commande</th>
+                        <th class="text-right" style="vertical-align:top">Prix d'achat<br />€ HT</th>
+                        <th class="text-left"  style="vertical-align:top">Unité</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr t-foreach="o.product_ids" t-as="l">
+                    <tr t-foreach="o.tarif_ids" t-as="l">
                         <td class="text-left">  <span t-field="l.product_id.is_code"/> </td>
                         <td class="text-left">  <span t-field="l.product_id.product_tmpl_id.name"/> </td>
                         <td class="text-left">  <span t-field="l.product_id.product_tmpl_id.is_ref_fournisseur"/> </td>
                         <td class="text-left">  <span t-field="l.product_id.product_tmpl_id.is_ref_plan"/> </td>
-                        <td class="text-right"> <span t-field="l.lot_appro"/>  </td>
-                        <td class="text-left">  <span t-field="l.product_id.product_tmpl_id.uom_id"/>  </td>
+                        <td class="text-right"> <span t-field="l.minimum"/>  </td>
                         <td class="text-right"> <span t-field="l.prix_achat"/> </td>
                         <td class="text-left">  <span t-field="l.uom_po_id"/>  </td>
                     </tr>
