--- a/views/report.xml
+++ b/views/report.xml
@@ -10,6 +10,10 @@
             name="is_plastigray.report_liste_servir"
             file="is_plastigray.report_liste_servir"
         />
+        <record id="report_liste_servirs" model="ir.actions.report.xml">
+            <field name="paperformat_id" ref="is_plastigray.liste_servir_paperformat"/>
+        </record>
+
 
         <report 
             id="report_inventaires"
