--- a/views/report_paperformat.xml
+++ b/views/report_paperformat.xml
@@ -24,12 +24,12 @@
             <field name="page_height">0</field>
             <field name="page_width">0</field>
             <field name="orientation">Portrait</field>
-            <field name="margin_top">55</field>
+            <field name="margin_top">45</field>
             <field name="margin_bottom">25</field>
             <field name="margin_left">7</field>
             <field name="margin_right">7</field>
             <field name="header_line" eval="False" />
-            <field name="header_spacing">50</field>
+            <field name="header_spacing">40</field>
             <field name="dpi">90</field>
         </record>
 
@@ -154,6 +154,24 @@
             <field name="dpi">90</field>
         </record>
 
+
+
+
+        <record id="liste_servir_paperformat" model="report.paperformat">
+            <field name="name">A4 - Liste à servir</field>
+            <field name="default" eval="True" />
+            <field name="format">A4</field>
+            <field name="page_height">0</field>
+            <field name="page_width">0</field>
+            <field name="orientation">Landscape</field>
+            <field name="margin_top">50</field>
+            <field name="margin_bottom">15</field>
+            <field name="margin_left">7</field>
+            <field name="margin_right">7</field>
+            <field name="header_line" eval="False" />
+            <field name="header_spacing">45</field>
+            <field name="dpi">90</field>
+        </record>
 
 
 
